--- a/app/src/main/res/layout/fragment_ventas.xml
+++ b/app/src/main/res/layout/fragment_ventas.xml
@@ -4,10 +4,29 @@
     android:layout_height="match_parent"
     tools:context="com.lacf.luisadrian.vendexpress.fragments.Ventas">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Ventas" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_margin="10dp"
+                android:text="Próximos pagos"
+                android:textColor="@color/colorPrimary"
+                android:textSize="30sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical"
+                android:id="@+id/rcv_abonos"/>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </FrameLayout>
